# NewsClassificationRiphah

./: .gitignore  README.md  snake_game.py
.github/workflows/: action.yml
backend/: README.md  constants.py  main.py  pyproject.toml  requirements.txt  translations.py
frontend/: README.md  app.py  pdf_reports.py  pyproject.toml  requirements.txt
github/workflows/: snake.yml
