[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit>=1.53.1",
    "plotly>=6.5.2",
    "matplotlib>=3.10.8",
    "fpdf2>=2.8.5",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "trafilatura>=2.0.0",
]
